# smash-hotfix

./: .copier-answers.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml
src/: fix-form.py
