[project]
authors = [
  {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
]
description = ""
license = {text = "GPL-3.0+"}
name = "smash_hotfix_issue_279"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
tools = [
  "pre-commit"
]

[project.scripts]
"smash_hotfix_issue_279_start" = "main:start"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
